--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>TodoApp</title>
-    <link rel="icon" href="../images/icon.jpeg" type="image">
+    <link rel="icon" href="images/icon.jpeg" type="image">
 
 
 </head
 >
-<body background="../images/back.jpg">
+<body background="images/back.jpg">
    
     <div class="but">
         <button onclick="document.location='login.html'" type="button" class="btn btn-outline-primary">Go to TodoApp</button>
