--- a/main.html
+++ b/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>TodoApp</title>
-    <link rel="icon" href="../images/icon.jpeg" type="image">
+    <link rel="icon" href="images/icon.jpeg" type="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -24,12 +24,12 @@
 
 
   </head>
-<body background="../images/back.jpg">
+<body background="images/back.jpg">
 
      <!-- Header -->  
      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" >
         <div class="container-fluid" class='head'>
-          <img src="./images/icon.jpeg" height=60px alt="logo">
+          <img src="images/icon.jpeg" height=60px alt="logo">
   
           <a class="navbar-brand" href="#">Welcome to TodoApp   </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
             <li>So, start making your to-do lists today. You'll soon be less stressed, more organized and find yourself with more time in the day than you ever realized you had!</li>
         
         </ul>
-        <img src="../images/pngegg.png" alt="" height=210px>
+        <img src="./images/pngegg.png" alt="" height=210px>
     </div>
 
     <div id="snackbar">Redirected using callback</div>
