--- a/main.html
+++ b/main.html
@@ -73,7 +73,7 @@
             <li>So, start making your to-do lists today. You'll soon be less stressed, more organized and find yourself with more time in the day than you ever realized you had!</li>
         
         </ul>
-        <img src="./images/pngegg.png" alt="" height=210px>
+        <img src="images/pngegg.png" alt="" height=210px>
     </div>
 
     <div id="snackbar">Redirected using callback</div>
