--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>TodoApp</title>
     <link rel="icon" href="images/icon.jpeg" type="image">
+
+    <link rel="icon" href="images/icon.jpeg" type="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -43,7 +45,7 @@
   
             </li>
             <li class="nav-item">
-              <a class="nav-link active"  class="nav-link" href="login.html">Logout</a>
+              <a class="nav-link active"  class="nav-link" href="index.html">Logout</a>
             </li>
           
   
